--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ dist
 dist-ssr
 *.local
 
+# TypeScript build artifacts
+*.tsbuildinfo
+src/**/*.js
+src/**/*.d.ts
+vite.config.js
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
