--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -p tsconfig.app.json && tsc -p tsconfig.node.json && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server.js",
