Force Vercel to use Node.js 18.x runtime and update TypeScript config to prevent ES module emission

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,7 +10,9 @@
     "rootDir": ".",
     "strict": true,
     "skipLibCheck": true,
-    "composite": true
+    "composite": true,
+    "isolatedModules": false,
+    "noEmitOnError": true
   },
   "include": ["api"]
 }
