Revert to CommonJS module.exports and update TypeScript config for Vercel compatibility

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,7 +12,8 @@
     "skipLibCheck": true,
     "composite": true,
     "isolatedModules": false,
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["api"]
 }
